# fastllm

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  README_EN.md  ToolCall-SGLang-PLAN.md  android_build.sh  check_mem.py  cli.py  cli_low_api.py  docker-compose.yaml  install.sh  main.cpp  make_whl.sh  make_whl_rocm.sh  plan.md  requirements-server.txt  simple_install.sh  test_fastllm_multimodal.py  test_gemma4_moe.py
.github/workflows/: Build.yml
Qwen3-Coder-30B-A3B-Instruct/: LICENSE  README.md  config.json  generation_config.json  merges.txt  model.safetensors.index.json  tokenizer_config.json
docs/: ascend_npu.md  benchmark.md  convert_model.md  custom.md  custom_op.md  deepseek.md  demo_arguments.md  dtype_config.md  english_custom.md  english_demo_arguments.md  faq.md  llama_cookbook.md  mixforward.md  models.md  nightly.md  nightly_changelog.md  qwen3.md  rocm.md  tfacc.md  version.md
example/: README.md
example/Android/Fastllm/jni/: CMakeLists.txt  jni_bridge.cpp
example/Android/LLMAssistant/app/src/main/cpp/: CMakeLists.txt  LLMChat.cpp  LLMChat.h  main.cpp  native-lib.cpp
example/Android_test/: AndroidManifest.xml  build.sh
example/Qui/: FastLLM.cpp
example/Win32Demo/: StringUtils.h  Win32Demo.cpp  Win32Demo.sln  Win32Demo.vcxproj  fastllm-gpu.vcxproj  fastllm-gpu.vcxproj.filters  fastllm.vcxproj  fastllm.vcxproj.filters  httplib.h
example/apiserver/: apiserver.cpp  json11.cpp  json11.hpp
example/benchmark/: benchmark.cpp  prompts.txt
example/chat_template/: deepseekv31.jinja
example/fastllmStudio/: build_ubuntu.sh  main.py  requirements.txt
example/openai_server/: README.md  fastllm_completion.py  openai_api_server.py  requirements.txt
example/python/: custom_model.py  qwen2.py
example/webui/: httplib.h  webui.cpp
include/: baichuan.h  basellm.h  chatglm.h  device.h  executor.h  factoryllm.h  fastllm-cuda.h  fastllm.h  gguf.h  graph.h  model.h  moss.h  template.h  utils.h  vicuna.h
include/blocks/: baseblock.h
include/models/: baichuan.h  basellm.h  bert.h  chatglm.h  cogvlm.h  deepseekv2.h  deepseekv4.h  ernie4_5.h  factoryllm.h  gemma4.h  glm.h  glm4_moe.h  glm5_moe_dsa.h  gpt_oss.h  graphllm.h  hunyuan.h  hy_v3.h  internlm2.h  llama.h  minicpm.h  minicpm3.h  minimax.h  minimax_m2.h  moe.h  moss.h  pangu_moe.h  phi3.h  qwen.h  qwen2.h  qwen3.h  qwen3_5.h  qwen3_cuda_common.h  qwen3_moe.h  qwen3_next.h  step3p5.h  xlmroberta.h
include/utils/: armMath.h  avxMath.h  persistent_worker_group.h  utils.h
pyfastllm/: README.md  build_libs.py  install.sh  setup.py  test_func.sh
pyfastllm/demo/: cli.py  cli_low_api.py  cli_thread.py  convert_model.py  test_ops.py  web_api.py  web_api_client.py
pyfastllm/examples/: chatglm2.py  cli_low_level.py  cli_simple.py  convert_model.py  test_chatglm2.py  test_chatglm2_cpp.py  test_chatglm2_func.py  test_ops.py  web_api.py  web_api_client.py
pyfastllm/fastllm/: __init__.py  convert.py  models.py
src/: baichuan.cpp  chatglm.cpp  device.cpp  executor.cpp  fastllm-cuda.cu  fastllm.cpp  gguf.cpp  graph.cpp  model.cpp  moss.cpp  pybinding.cpp  template.cpp  tokenizer.cpp  vicuna.cpp
src/blocks/: attentionpagedblock.cpp  embeddingblock.cpp  linearaddblock.cpp  linearswiglublock.cpp  llmsamplingblock.cpp  mergemoeblock.cpp  mlpblock.cpp
src/models/: baichuan.cpp  basellm.cpp  bert.cpp  chatglm.cpp  cogvlm.cpp  deepseekv2.cpp  deepseekv4.cpp  ernie4_5.cpp  gemma4.cpp  glm.cpp  glm4_moe.cpp  glm5_moe_dsa.cpp  gpt_oss.cpp  graphllm.cpp  hunyuan.cpp  hy_v3.cpp  internlm2.cpp  llama.cpp  minicpm.cpp  minicpm3.cpp  minimax.cpp  minimax_m2.cpp  moe.cpp  moss.cpp  pangu_moe.cpp  phi3.cpp  qwen.cpp  qwen2.cpp  qwen3.cpp  qwen3_5.cpp  qwen3_moe.cpp  qwen3_next.cpp  step3p5.cpp  xlmroberta.cpp
test/agent/: README.md  agent_tool_eval.py  download.sh  run.sh
test/api/: anthropic.py  openai.py  responses.py  test_model_context_metadata.py  test_startup_progress.py  test_usage_accounting.py
test/basic/: config.py  forward_check.py  logits_test.py  test_fastllm_completion.py  tokenizer_check.py
test/benchmark/: README.md  decode.py  decode_config.example.json  prefill.py  prefill_config.example.json  requirements.txt
test/cmmlu/: README.md  baichuan.py  categories.py  chatglm.py  eval.py  minicpm3.py  openai.py  qwen.py  qwq.py  timelog.md
test/evaluation_plan/: README.md  benchmark_catalog.json
test/gsm8k/: .gitignore  README.md  download.sh  gsm8k_api_eval.py  requirements.txt  run.sh
test/mmlu_pro/: README.md  api_eval.py  download.sh  requirements.txt  run.sh  setup.sh
test/multimodal/: README.md  common.py  fastllm_multimodal_check.py  fastllm_openai_multimodal_check.py  qwen3_5_transformers_check.py
test/ops/: cppOps.cpp  regressionOps.cpp  tokenizerTest.cpp
test/terminal_bench/: README.md  qwen3_6_27b.env.example  qwen3_6_27b_methodology.json  run.sh  setup.sh
test/toolcall/: CONSTRAINT_BACKEND_DECISION.md  README.md  run_live_toolcall_tests.py  test_function_call_parser.py  test_live_openai_helper.py  test_llm_toolcall_constraint_hook.py  test_non_stream_toolcall_response.py  test_parser_golden.py  test_stream_toolcall_response.py  test_toolcall_adapter_context.py  test_toolcall_constraints.py  test_toolcall_generation_constraint.py
tools/: alpaca2flm.py  baichuan_peft2flm.py  chatglm_export.py  fastllm_triton_server.py  moss_export.py  quant.cpp  ssd_read_bench.cpp
tools/fastllm_pytools/: __init__.py  benchmark.py  chat.py  cli.py  download.py  encoding_dsv4.py  env.py  export.py  gemma4_multimodal.py  hf_model.py  llm.py  qwen35_multimodal.py  qwen35_multimodal_native.py  server.py  startup_progress.py  step3p7_multimodal_native.py  torch2flm.py  tui.py  ui.py  util.py  web_demo.py  webui.py
tools/nccl_latency_bench/: .gitignore  Makefile  README.md  RESULTS.md  nccl_latency.cu
tools/scripts/: alpaca2flm.py  baichuan2_2flm.py  baichuan2flm.py  baichuan_peft2flm.py  bert2flm.py  chatglm_export.py  cli_demo.py  glm_export.py  internlm2flm.py  llama3_to_flm.py  minicpm2flm.py  (+7 more)
whl_docker/: Dockerfile
whl_docker_rocm/: Dockerfile
(+277 files in other folders)
